--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/stack": "^6.3.27",
     "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
-    "lottie-react-native": "^6.7.0",
+    "lottie-react-native": "6.5.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-gesture-handler": "~2.14.0",
