--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.1",
     "@react-navigation/bottom-tabs": "^6.5.18",
     "@react-navigation/native": "^6.1.15",
     "@react-navigation/stack": "^6.3.27",
+    "@types/react": "~18.2.45",
+    "antd": "^5.15.2",
     "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
     "lottie-react-native": "6.5.1",
@@ -20,7 +23,9 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "typescript": "^5.3.0",
+    "expo-checkbox": "~2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
